@@ -1,8 +1,5 @@
 package com.j256.ormlite.dao;
 
-import java.io.Closeable;
-import java.io.IOException;
-
 /**
  * Extension to CloseableIterable which defines a class which has an iterator() method that returns a
  * {@link CloseableIterator} but also can be closed itself. This allows us to do something like this pattern:
@@ -20,11 +17,11 @@ import java.io.IOException;
  * 
  * @author graywatson
  */
-public interface CloseableWrappedIterable<T> extends CloseableIterable<T>, Closeable {
+public interface CloseableWrappedIterable<T> extends CloseableIterable<T>, AutoCloseable {
 
 	/**
 	 * This will close the last iterator returned by the {@link #iterator()} method.
 	 */
 	@Override
-	public void close() throws IOException;
+	public void close() throws Exception;
 }
