@@ -1,6 +1,5 @@
 package com.j256.ormlite.dao;
 
-import java.io.IOException;
 import java.lang.ref.SoftReference;
 import java.lang.ref.WeakReference;
 import java.sql.SQLException;
@@ -439,7 +438,7 @@ public interface Dao<T, ID> extends CloseableIterable<T> {
 	 * the {@link #getWrappedIterable()} method to get a wrapped iterable for each thread instead.
 	 * </p>
 	 */
-	public void closeLastIterator() throws IOException;
+	public void closeLastIterator() throws Exception;
 
 	/**
 	 * <p>
