@@ -12,6 +12,19 @@ import java.sql.SQLException;
 public class IOUtils {
 
 	/**
+	 * Close the auto-closeable if not null and ignore any exceptions.
+	 */
+	public static void closeQuietly(AutoCloseable closeable) {
+		if (closeable != null) {
+			try {
+				closeable.close();
+			} catch (Exception e) {
+				// ignored
+			}
+		}
+	}
+
+	/**
 	 * Close the closeable if not null and ignore any exceptions.
 	 */
 	public static void closeQuietly(Closeable closeable) {
@@ -20,6 +33,19 @@ public class IOUtils {
 				closeable.close();
 			} catch (IOException e) {
 				// ignored
+			}
+		}
+	}
+
+	/**
+	 * Close it and ignore any exceptions.
+	 */
+	public static void closeThrowSqlException(AutoCloseable closeable, String label) throws SQLException {
+		if (closeable != null) {
+			try {
+				closeable.close();
+			} catch (Exception e) {
+				throw SqlExceptionUtil.create("could not close " + label, e);
 			}
 		}
 	}
