@@ -1,6 +1,5 @@
 package com.j256.ormlite.support;
 
-import java.io.IOException;
 import java.sql.Connection;
 import java.sql.SQLException;
 import java.sql.Savepoint;
@@ -160,7 +159,7 @@ public class DatabaseConnectionProxy implements DatabaseConnection {
 	}
 
 	@Override
-	public void close() throws IOException {
+	public void close() throws Exception {
 		if (proxy != null) {
 			proxy.close();
 		}
