@@ -1,6 +1,5 @@
 package com.j256.ormlite;
 
-import java.io.IOException;
 import java.sql.SQLException;
 
 import com.j256.ormlite.db.DatabaseType;
@@ -43,7 +42,7 @@ public class LockedConnectionSource implements ConnectionSource {
 	}
 
 	@Override
-	public void close() throws IOException {
+	public void close() throws Exception {
 		synchronized (delegate) {
 			delegate.close();
 		}
